tests/not-fn.stderr
error: expected `fn`
 --> $DIR/not-fn.rs:4:5
  |
4 | pub struct foo {
  |     ^^^^^^
