tests/not-fn.rs
use auto_vec::auto_vec;

#[auto_vec]
pub struct foo {
    x: i32,
    y: String,
}
fn main() {}
